Fri, 02 May 2008 17:42:54 +0200 <thp@perli.net>
Maemo-related changes; allow custom player on Maemo (optional)

	* data/gpodder.glade: gPodder maemo preferences window should be
	modal; Add "Ask before closing gPodder" checkbox to Maemo preferences
	* src/gpodder/config.py: Add option "maemo_allow_custom_player" that
	allows setting the "player" and "videoplayer" variables to a command
	that will be called, like on the Desktop version (instead of always
	opening Nokia's Media Player with all files)
	* src/gpodder/gui.py: Maemo-specific UI tweaks
	* src/gpodder/libgpodder.py: Only call Nokia's Mediaplayer when we are
	on Maemo and when "maemo_allow_custom_player" is set to False

Fri, 02 May 2008 17:28:22 +0200 <thp@perli.net>
Change "Channel" to "Podcast"; new main menu; URL entry updated; +niceties

	* data/gpodder.glade: Change "Channel" to "Podcast"; re-structure main
	menu in gPodder window
	* src/gpodder/config.py: Add "show_podcast_url_entry" configuration
	option that controls whether the podcast url entry box is shown in the
	main window or not; add observer functionality to the configuration
	manager, so UI elements can "watch" the configuration manager for
	changes of UI-related configuration options
	* src/gpodder/console.py: Change "Channel" to "Podcast"
	* src/gpodder/gui.py: Hildon-specific file open/save dialogs; default
	"Enter podcast URL..." test for the URL entry box; size-dependent
	showing and hiding of podcast icon and downloaded count pixmap also
	for the Desktop version; change "Channel" to "Podcast"; offer
	first-time users to see a list of example podcasts to subscribe to;
	dynamic main menu; code supporting the main menu changes; add code for
	sending the subscription list via e-mail; import from OPML file in
	addition to import from OPML URL; remove unneeded callbacks (wishlist,
	select all, ...); optionally set title and hide url entry in the
	gPodderOpmlLister (OPML import GUI); Add Frank Harper to list of